# Badger2040

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.bat  pull_files.py  pyproject.toml  setup.cfg
app/: main.py
app/programs/: __init__.py  net.py  status.py
badger2040/: __init__.py  __init__.pyi
badger2040/books/: 289-0-wind-in-the-willows-abridged.txt
badger2040/examples/: list.py
badger2040/state/: ebook.json  launcher.json
